Add exec configuration to run the bot in CLI