@@ -23,6 +23,7 @@
 
         <flyway.version>10.4.1</flyway.version>
         <ktor.version>2.3.5</ktor.version>
+        <mainClass>com.freya02.bot.Main</mainClass>
     </properties>
 
     <build>
@@ -82,7 +83,7 @@
                             <transformers>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.freya02.bot.Main</mainClass>
+                                    <mainClass>${mainClass}</mainClass>
                                 </transformer>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                             </transformers>
@@ -92,6 +93,29 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <executable>java</executable>
+                    <arguments>
+                        <argument>--add-exports</argument>
+                        <argument>jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</argument>
+                        <argument>--add-exports</argument>
+                        <argument>jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</argument>
+                        <argument>--add-exports</argument>
+                        <argument>jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</argument>
+                        <argument>--add-exports</argument>
+                        <argument>jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</argument>
+                        <argument>--add-exports</argument>
+                        <argument>jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</argument>
+                        <argument>-classpath</argument>
+                        <classpath/>
+                        <argument>${mainClass}</argument>
+                    </arguments>
+                </configuration>
             </plugin>
         </plugins>
     </build>
